les liens de la page d'accueil à la séconde page

--- a/earn.html
+++ b/earn.html
@@ -1261,19 +1261,9 @@
     <div tabindex="0" data-test="sentinelEnd"></div>
   </div>
   <!--POPUP-->
-
+<script src="index.js" charset="utf-8"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript">
-
-      $(document).ready(function() {
-         $('.jss288').click(function() {
-            $('#overlay').fadeIn(300);
-         });
-         $('.MuiSvgIcon-root, .MuiBackdrop-root').click(function() {
-            $('#overlay').fadeOut(300);
-         });
-      });
-  </script>
+  
 
 </body>
 
