--- a/earn.html
+++ b/earn.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -871,7 +872,7 @@
   z-index: 1300;
    top: 0;
    right: 0;
-   bottom: 0;
+   bottom: 0;  
    left: 0;
    display: none;
 }
