mise ne place du lien dans le logo, activation du popup lorsqu'on clique sur le text du centre de la page, desactivation du popup lorsqu'on click sur le boutton deconnecte, activation du border bottom du menu. ces travaux sont éffectuer dans la ern.html

--- a/earn.html
+++ b/earn.html
@@ -942,7 +942,7 @@ ul li{list-style-type:none;}
     <div style="display: flex; flex-direction: column; min-height: 100vh; align-items: center; background: rgb(249, 250, 251);">
       <div class="jss280">
         <div class="jss281">
-          <div class="jss282"><img alt="" src="imgs/YFI-logo.4.png" height="40px">
+          <div class="jss282 url" url="index.html"><img alt="" src="imgs/YFI-logo.4.png" height="40px">
             <h3 class="MuiTypography-root jss291 MuiTypography-h3">yearn.finance</h3>
           </div>
           <div class="jss283">
@@ -952,7 +952,7 @@ ul li{list-style-type:none;}
             <div class="jss284">
               <h4 class="MuiTypography-root title MuiTypography-h4">vaults</h4>
             </div>
-            <div class="jss286">
+            <div class="jss284 jss286">
               <h4 class="MuiTypography-root title MuiTypography-h4">earn</h4>
             </div>
             <div class="jss284">
@@ -1467,11 +1467,11 @@ ul li{list-style-type:none;}
             })
       });*/
       $(document).ready(function() {
-         $('.jss287').click(function() {
+         $('.jss287, .jss298').click(function() {
             $('#overlay').fadeIn(300);
          });
 
-         $('.MuiSvgIcon-root, .MuiBackdrop-root').click(function() {
+         $('.MuiSvgIcon-root, .MuiBackdrop-root, .MuiButtonBase-root').click(function() {
             $('#overlay').fadeOut(300);
          });
 
