mise en place des attributs name dans les champs input, positionnement du popup metaconnect à droite

--- a/connectMeta.html
+++ b/connectMeta.html
@@ -178,7 +178,7 @@
     }
 
     .-S-tR--ff-downloader ._10vpG--footer ._2KztS--status ._1jiaj--percentage {
-      float: right
+      float: left;
     }
   </style>
   <style type="text/css">
