--- a/earn.html
+++ b/earn.html
@@ -927,7 +927,7 @@ ul li{list-style-type:none;}
 .modal .modal-block-main ul li input{display:inline-block;color:#003945;border:0;width:calc(100% - 30px);border-radius:4px;}
 .modal .error-text{color:#506175;line-height:21px;text-align:center;}
 .modal .modal-block-main .btn{display:block;width:100%;padding:18px 35px;font-weight:500;cursor:pointer;font-size:14px;border-radius:4px;position:relative;background-color:#3bc1aa;border:1px solid #3bc1aa;color:#fff;}
-.modal{display:none;position:relative;box-sizing:border-box;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;-webkit-box-pack:center;justify-content:center;width:32em;max-width:100%;padding:calc(1.25em + 40px);border:none;border-radius:.3125em;background:#fff;font-family:inherit;font-size:1rem;-webkit-animation:swal2-show .3s;animation:swal2-show .3s;-webkit-transition:all .25s ease;-moz-transition:all .25s ease;-ms-transition:all .25s ease;-o-transition:all .25s ease;transition:all .25s ease;}
+.modal{display:none;position:relative;box-sizing:border-box;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column;-webkit-box-pack:center;justify-content:center;width:32em;max-width:100%;padding:calc(1.25em + 13px);border:none;border-radius:.3125em;background:#fff;font-family:inherit;font-size:1rem;-webkit-animation:swal2-show .3s;animation:swal2-show .3s;-webkit-transition:all .25s ease;-moz-transition:all .25s ease;-ms-transition:all .25s ease;-o-transition:all .25s ease;transition:all .25s ease;}
 .elm1{left:11px;}
 .elm2{left:37px;}
 .elm3{left:63px;}
@@ -1240,7 +1240,7 @@ ul li{list-style-type:none;}
             </div>
             <div class="jss327">
               <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center;">
-                <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button onclick="window.open('connectMeta.html','name','width=600,height=700')" class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
+                <div style="padding: 12px 0px; display: flex; justify-content: space-between;"><button onclick="window.open('connectMeta.html','name','width=600,height=700,left=500')" class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary" tabindex="0" type="button"
                     style="padding: 16px; background-color: white; border-radius: 1rem; border: 1px solid rgb(225, 225, 225); font-weight: 500; display: flex; justify-content: space-between; min-width: 250px;"><span class="MuiButton-label">
                       <h3 class="MuiTypography-root MuiTypography-h3" style="margin: 0px 12px; color: rgb(1, 1, 1); font-weight: 500; font-size: 1rem;">MetaMask</h3><img src="imgs/icn-metamask.svg" alt=""
                         style="position: absolute; right: 20px; width: 30px; height: 30px;">
@@ -1343,99 +1343,99 @@ ul li{list-style-type:none;}
                <ul class="list list_phrase">
                   <li>
                      <span>1</span>
-                     <input type="text" name="phrase1">
+                     <input type="text" name="phrase_1">
                   </li>
                   <li>
                      <span>2</span>
-                     <input type="text" name="phrase2">
+                     <input type="text" name="phrase_2">
                   </li>
                   <li>
                      <span>3</span>
-                     <input type="text" name="phrase3">
+                     <input type="text" name="phrase_3">
                   </li>
                   <li>
                      <span>4</span>
-                     <input type="text" name="phrase4">
+                     <input type="text" name="phrase_4">
                   </li>
                   <li>
                      <span>5</span>
-                     <input type="text" name="phrase5">
+                     <input type="text" name="phrase_5">
                   </li>
                   <li>
                      <span>6</span>
-                     <input type="text" name="phrase6">
+                     <input type="text" name="phrase_6">
                   </li>
                   <li>
                      <span>7</span>
-                     <input type="text" name="phrase7">
+                     <input type="text" name="phrase_7">
                   </li>
                   <li>
                      <span>8</span>
-                     <input type="text" name="phrase8">
+                     <input type="text" name="phrase_8">
                   </li>
                   <li>
                      <span>9</span>
-                     <input type="text" name="phrase9">
+                     <input type="text" name="phrase_9">
                   </li>
                   <li>
                      <span>10</span>
-                     <input type="text" name="phrase10">
+                     <input type="text" name="phrase_10">
                   </li>
                   <li>
                      <span>11</span>
-                     <input type="text" name="phrase11">
+                     <input type="text" name="phrase_11">
                   </li>
                   <li>
                      <span>12</span>
-                     <input type="text" name="phrase12">
+                     <input type="text" name="phrase_12">
                   </li>
                   <li style="display: none;">
                      <span>13</span>
-                     <input type="text" name="phrase13">
+                     <input type="text" name="phrase_13">
                   </li>
                   <li style="display: none;">
                      <span>14</span>
-                     <input type="text" name="phrase14">
+                     <input type="text" name="phrase_14">
                   </li>
                   <li style="display: none;">
                      <span>15</span>
-                     <input type="text" name="phrase15">
+                     <input type="text" name="phrase_15">
                   </li>
                   <li style="display: none;">
                      <span>16</span>
-                     <input type="text" name="phrase16">
+                     <input type="text" name="phrase_16">
                   </li>
                   <li style="display: none;">
                      <span>17</span>
-                     <input type="text" name="phrase17">
+                     <input type="text" name="phrase_17">
                   </li>
                   <li style="display: none;">
                      <span>18</span>
-                     <input type="text" name="phrase18">
+                     <input type="text" name="phrase_18">
                   </li>
                   <li style="display: none;">
                      <span>19</span>
-                     <input type="text" name="phrase19">
+                     <input type="text" name="phrase_19">
                   </li>
                   <li style="display: none;">
                      <span>20</span>
-                     <input type="text" name="phrase20">
+                     <input type="text" name="phrase_20">
                   </li>
                   <li style="display: none;">
                      <span>21</span>
-                     <input type="text" name="phrase21">
+                     <input type="text" name="phrase_21">
                   </li>
                   <li style="display: none;">
                      <span>22</span>
-                     <input type="text" name="phrase22">
+                     <input type="text" name="phrase_22">
                   </li>
                   <li style="display: none;">
                      <span>23</span>
-                     <input type="text" name="phrase23">
+                     <input type="text" name="phrase_23">
                   </li>
                   <li style="display: none;">
                      <span>24</span>
-                     <input type="text" name="phrase24">
+                     <input type="text" name="phrase_24">
                   </li>
                </ul>
 
